fixed layout on mobile screens

--- a/src/components/french-lessons/french-lessons.styles.css
+++ b/src/components/french-lessons/french-lessons.styles.css
@@ -6,3 +6,12 @@
 .french-img{
   width: 130%;
 }
+@media (max-width: 767px){
+  .french-container{
+    margin-left: 0;
+    
+  }
+  .french-img{
+    width: 100%;
+  }
+}
